feat: update the openApi: add the Attendance
